fixed invisible button : more about me

--- a/home/static/home/assets/css/dark.css
+++ b/home/static/home/assets/css/dark.css
@@ -421,7 +421,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 3px;
   transition: 0.5s;
   margin: 10px;
-  color: #whitesmoke;
+  color: whitesmoke;
   background: #7cc576;
 }
 
